[project]
name = "banner_nish"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "NishNovae", email = "raecrowned@gmail.com"},
]
dependencies = [
    "pyfiglet>=1.0.2",
]
requires-python = ">=3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
